<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhatsAppTaller</string>
    <string name="IP"> http://192.168.0.3</string>
    <string name="PORT"> 8000 </string>
    <string name="USER">user</string>
    <string name="PW">password</string>
    <string name="USER_CFG">user_cfg</string>
    <string name="SAVED_PORT">PORT</string>
    <string name="INFO">info</string>
    <string name="RECEIVER">receiver</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_checkin">Checkin</string>
    <string name="action_broadcast">Nueva difusion</string>
    <string name="profile_configuration_status">Status</string>
    <string name="profile_configuration_nickname">Nickname</string>
    <string name="profile_configuration_status_message">Message</string>
    <string name="profile_about">About</string>
    <string name="profile_nickname">Nickname</string>
    <string name="profile_last_connection">Last Connection</string>
    <string name="profile_status_message">Message</string>
    <string name="profile_status">Status</string>
    <string name="profile_checkin">Last Checkin</string>
    
    
    
</resources>
